syntax = "proto3";
import "google/protobuf/timestamp.proto";
package proto.chat;

option java_multiple_files = true;

message Message {
    string senderId = 1;
    string content = 2;
    google.protobuf.Timestamp createdAt = 3;
    string messageId = 4;
}
message ChatRequest{
    string chatRoom = 1;
    int32 requestedChunkSize = 2;
}

message ChatResponse {
    repeated Message messages = 1;
}

service ChatService {
    rpc getAllMessages(ChatRequest) returns (ChatResponse);
}